# perturbench

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
notebooks/demos/: data_splitter_demo.ipynb  evaluator_demo.ipynb  generate_prediction_dataframe.ipynb
notebooks/neurips2024/: build_data_scaling_splits.ipynb  build_imbalance_splits.ipynb  cpa_theis_fork_hparams.yaml  generate_scgpt_embeddings.ipynb
notebooks/neurips2024/data_curation/: curate_McFalineFigueroa23.ipynb  curate_McFalineFigueroa23_step1.R  curate_McFalineFigueroa23_step2.ipynb  curate_Norman19.ipynb  readme.txt
src/perturbench/analysis/: plotting.py  preprocess.py  utils.py
src/perturbench/analysis/benchmarks/: aggregation.py  evaluation.py  evaluator.py  metrics.py
src/perturbench/configs/: predict.yaml  train.yaml
src/perturbench/configs/callbacks/: default.yaml  early_stopping.yaml  lr_monitor.yaml  model_checkpoint.yaml
src/perturbench/configs/data/: devel.yaml  mcfaline23.yaml  norman19.yaml  sciplex3.yaml
src/perturbench/configs/hpo/: biolord_hpo.yaml  cpa_hpo.yaml  decoder_only_hpo.yaml  latent_additive_hpo.yaml  linear_additive_hpo.yaml  local.yaml  sams_vae_hpo.yaml
src/perturbench/configs/logger/: csv.yaml  default.yaml  tensorboard.yaml
src/perturbench/configs/model/: biolord.yaml  cpa.yaml  decoder_only.yaml  latent_additive.yaml  linear_additive.yaml  sams_vae.yaml
src/perturbench/configs/paths/: default.yaml
src/perturbench/configs/trainer/: default.yaml
src/perturbench/data/: collate.py  datasplitter.py  modules.py  types.py  utils.py
src/perturbench/data/accessors/: base.py  norman19.py  srivatsan20.py
src/perturbench/data/datasets/: __init__.py  population.py  singlecell.py
src/perturbench/data/resources/: devel.h5ad
src/perturbench/data/transforms/: base.py  encoders.py  ops.py  pipelines.py
src/perturbench/modelcore/: predict.py  train.py  utils.py
src/perturbench/modelcore/models/: __init__.py  average.py  base.py  biolord.py  cpa.py  decoder_only.py  latent_additive.py  linear_additive.py  sams_vae.py
src/perturbench/modelcore/nn/: mlp.py  vae.py
(+39 files in other folders)
